--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: bash
 
-# Use container-based infrastructure for quicker build start-up
 sudo: false
 
 addons:
   apt:
     sources:
-    - debian-sid    # Grab shellcheck from the Debian repo (o_O)
+    - debian-sid
     packages:
     - shellcheck
 
