--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: bash
 
-sudo: false
+sudo: required
 
-addons:
-  apt:
-    sources:
-    - debian-sid
-    packages:
-    - shellcheck
+services:
+  - docker
+
+before_install:
+  - docker pull koalaman/shellcheck
 
 script:
  - bash -c 'shopt -s globstar; shellcheck **/glsysbackup'
