--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - docker pull koalaman/shellcheck
 
 script:
- - bash -c 'shopt -s globstar; shellcheck **/glsysbackup'
+ - docker run -v $(pwd):/scripts koalaman/shellcheck /scripts/glsysbackup
 
 matrix:
   fast_finish: true
