--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - docker pull koalaman/shellcheck
 
 script:
- - docker run -v $(pwd):/scripts koalaman/shellcheck /scripts/glsysbackup
+ - docker run -v $(pwd):/ koalaman/shellcheck /glsysbackup
 
 matrix:
   fast_finish: true
