Test #2 with path in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - docker pull koalaman/shellcheck
 
 script:
- - docker run -v $(pwd):/ koalaman/shellcheck ./
+ - docker run -v $(pwd): koalaman/shellcheck ./
 
 matrix:
   fast_finish: true
