--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ before_install:
   - docker pull koalaman/shellcheck
 
 script:
- - docker run -v $(pwd):/scripts koalaman/shellcheck /scripts/glsysbackup ; exit $?
+  - docker run -v $(pwd):/scripts koalaman/shellcheck /scripts/glsysbackup
 
 matrix:
   fast_finish: true
+
+notifications:
+  email: false
