--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 
 script:
   - docker run koalaman/shellcheck --version
-  - docker run -v $(pwd):/scripts koalaman/shellcheck /scripts/glsysbackup
+  - docker run -v $(pwd):/scripts koalaman/shellcheck --color=always /scripts/glsysbackup
 
 matrix:
   fast_finish: true
