Some config variabels moved to config file, exit codes reworked.

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -11,7 +11,7 @@
 #  Project website:	https://github.com/ccztux/glsysbackup
 #
 #  Last Modification:	Christian Zettel (ccztux)
-#			2017-11-28
+#			2017-12-04
 #
 #  Description:		Generic Linux System Backup is an advanced backup tool written in bash.
 #
@@ -34,24 +34,39 @@
 
 # shellcheck disable=SC2034
 
+#-----------------------
+# Basic files and paths:
+#-----------------------
+
+# define base path of glsysbackup
+script_base_path="/usr/local/glsysbackup"
+
+# path to lock directory
+script_lock_directory="${script_base_path}/var/lock"
+
+# script lock file
+script_lock_file="${script_lock_directory}/glsysbackup.lock"
+
+
+
 #---------
 # Logging:
 #---------
 
 # enable log to file. (possible values: 1|0)
-log_to_file="0"
+log_to_file="1"
 
 # log directory
-log_directory="/var/log/"
+log_directory="${script_base_path}/var/log/"
 
 # filename of logfile
 log_filename="glsysbackup.log"
 
 # enable log to stdout (possible values: 1|0)
-log_to_stdout="1"
+log_to_stdout="0"
 
 # enable log to system logfile (possible values: 1|0)
-log_to_syslog="1"
+log_to_syslog="0"
 
 # timestamp format for log messages.
 log_timestamp_format="%Y-%m-%d %H:%M:%S"
