Functions: logHandlerSetConfig, logHandler reworked. Functions: checkRegularFileExists, checkFilePermissions, checkDirectoryExists, checkDirectoryPermissions replaced by function: checkFileParameters Many minor improvements.

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -11,7 +11,7 @@
 #  Project website:	https://github.com/ccztux/glsysbackup
 #
 #  Last Modification:	Christian Zettel (ccztux)
-#			2017-12-04
+#			2018-01-02
 #
 #  Description:		Generic Linux System Backup is an advanced backup tool written in bash.
 #
@@ -39,13 +39,13 @@
 #-----------------------
 
 # define base path of glsysbackup
-script_base_path="/usr/local/glsysbackup"
+script_base_path="/usr/local/${script_name}"
 
 # path to lock directory
 script_lock_directory="${script_base_path}/var/lock"
 
 # script lock file
-script_lock_file="${script_lock_directory}/glsysbackup.lock"
+script_lock_file="${script_lock_directory}/${script_name}.lock"
 
 
 
@@ -60,7 +60,7 @@ log_to_file="1"
 log_directory="${script_base_path}/var/log/"
 
 # filename of logfile
-log_filename="glsysbackup.log"
+log_filename="${script_name}.log"
 
 # enable log to stdout (possible values: 1|0)
 log_to_stdout="1"
@@ -148,6 +148,9 @@ backup_compression_type="gzip"
 
 # enable backup verbose mode
 backup_verbose_mode_enabled="1"
+
+# show backup totals
+backup_show_totals="1"
 
 # set backup destination path
 backup_destination_path="/var/backups/"
