--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -32,7 +32,7 @@
 #
 #========================================================================================================
 
-# shellcheck disable=SC2034
+# shellcheck disable=SC2034,SC2154
 
 #-----------------------
 # Basic files and paths:
