--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -32,16 +32,13 @@
 #
 #========================================================================================================
 
-# shellcheck disable=SC2034
+# shellcheck disable=SC2034,SC2154
 
 #-----------------------
 # Basic files and paths:
 #-----------------------
 
 # define base path of glsysbackup
-# shellcheck disable=SC2154
-script_base_path="/usr/local/${script_name}"
-
 script_base_path="/usr/local/${script_name}"
 
 # path to lock directory
