Some variables from config file moved to main script. Function: checkBackupDirStructure added. Other minor changes.

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -34,21 +34,6 @@
 
 # shellcheck disable=SC2034,SC2154
 
-#-----------------------
-# Basic files and paths:
-#-----------------------
-
-# define base path of glsysbackup
-script_base_path="/usr/local/${script_name}"
-
-# path to lock directory
-script_lock_directory="${script_base_path}/var/lock"
-
-# script lock file
-script_lock_file="${script_lock_directory}/${script_name}.lock"
-
-
-
 #---------
 # Logging:
 #---------
@@ -60,7 +45,7 @@ log_to_file="1"
 log_directory="${script_base_path}/var/log/"
 
 # filename of logfile
-log_filename="${script_name}.log"
+log_filename="${script_config_name}.log"
 
 # enable log to stdout (possible values: 1|0)
 log_to_stdout="1"
@@ -153,13 +138,10 @@ backup_verbose_mode_enabled="1"
 backup_show_totals="1"
 
 # set backup destination path
-backup_destination_path="/var/backups/"
+backup_destination_path="/var/backups"
 
 # set backup filename
-backup_filename="glsysbackup.${HOSTNAME%%.*}.tar.gz"
-
-# full path to backupfile
-backup_full_path="${backup_destination_path}${backup_filename}"
+backup_filename_prefix="my_backup"
 
 # files and folders you want to backup
 backup_items=(
@@ -188,9 +170,6 @@ backup_encryption_enabled="1"
 
 # set password for encryption
 backup_encryption_password="test1234"
-
-# filenme of encrypted backup file
-backup_encryption_filename="${backup_full_path//tar.gz/aes.tar.gz}"
 
 
 
