The beginning of the rework of the rotateHandler....

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -101,8 +101,17 @@ re_ionice_priority="7"
 # enable backup rotation (possible values: 1|0)
 backup_rotation_enabled="1"
 
-# number of backup files to keep
-backup_rotation_files_to_keep="5"
+# rotation weekday 1 is monday (possible values: 1|2|3|4|5|6|7)
+backup_rotation_weekday="1"
+
+# number of backup files to keep of daily backups
+backup_rotation_daily_max_backups="10"
+
+# number of backup files to keep of weekly backups
+backup_rotation_weekly_max_backups="8"
+
+# number of backup files to keep of monthly backups
+backup_rotation_monthly_max_backups="6"
 
 
 
