Some steps nearer to the new rotateHandler function...

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -101,14 +101,26 @@ re_ionice_priority="7"
 # enable backup rotation (possible values: 1|0)
 backup_rotation_enabled="1"
 
-# rotation weekday 1 is monday (possible values: 1|2|3|4|5|6|7)
-backup_rotation_weekday="1"
+# keep max 1 backup a day
+backup_rotation_one_backup_per_day_only="1"
 
 # number of backup files to keep of daily backups
 backup_rotation_daily_max_backups="10"
 
+# enable weekly backup rotation (possible values: 1|0)
+backup_rotation_weekly_enabled="1"
+
+# rotation weekday for weekly rotation. 1 is monday. (possible values: 1|2|3|4|5|6|7)
+backup_rotation_weekly_weekday="4"
+
 # number of backup files to keep of weekly backups
 backup_rotation_weekly_max_backups="8"
+
+# enable monthly backup rotation (possible values: 1|0)
+backup_rotation_monthly_enabled="1"
+
+# rotation weekday for monthly rotation. 1 is monday. (possible values: 1|2|3|4|5|6|7)
+backup_rotation_monthly_weekday="4"
 
 # number of backup files to keep of monthly backups
 backup_rotation_monthly_max_backups="6"
