README updated. script_exit_codes updated Some vars renamed.

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -162,7 +162,7 @@ backup_show_totals="1"
 backup_destination_path="/var/backups"
 
 # set backup filename
-backup_filename_prefix="my_backup"
+backup_base_filename="my_backup"
 
 # files and folders you want to backup
 backup_items=(
