--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -158,6 +158,12 @@ backup_verbose_mode_enabled="1"
 # show backup totals
 backup_show_totals="1"
 
+# enable tar ignore failed read
+backup_ignore_failed_read="1"
+
+# individual tar options
+backup_individual_options=("")
+
 # set backup destination path
 backup_destination_path="/var/backups"
 
