Changed variable: backup_rotation_monthly_weekday to backup_rotation_monthly_day_of_month as explained in issue: #50.

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -119,8 +119,8 @@ backup_rotation_weekly_max_backups="8"
 # enable monthly backup rotation (possible values: 1|0)
 backup_rotation_monthly_enabled="1"
 
-# rotation weekday for monthly rotation. 1 is monday. (possible values: 1|2|3|4|5|6|7)
-backup_rotation_monthly_weekday="1"
+# rotation day of month for monthly rotation. 1 is monday. (possible values: 1|2|3|...|last day of month)
+backup_rotation_monthly_day_of_month="1"
 
 # number of backup files to keep of monthly backups
 backup_rotation_monthly_max_backups="6"
