Changed format of configuration array: backup_individual_options to be consistent.

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -159,7 +159,9 @@ backup_verbose_mode_enabled="1"
 backup_show_totals="1"
 
 # individual tar options
-backup_individual_options=("")
+backup_individual_options=(
+""
+)
 
 # set backup destination path
 backup_destination_path="/var/backups"
