--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -131,8 +131,8 @@ installed_packages_enabled="1"
 # force this package manager to create installed packages file, if you have more than one package manager installed (possible values: rpm|dpkg|pacman|equery|pkgutil)
 installed_packages_forced_manager=""
 
-# file name of installed packages
-installed_packages_filename="/root/installed_syspackages.txt"
+# path where installed packages file should be created
+installed_packages_directory="/root"
 
 
 
