--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -11,7 +11,7 @@
 #  Project website:	https://github.com/ccztux/glsysbackup
 #
 #  Last Modification:	Christian Zettel (ccztux)
-#			2018-01-22
+#			2018-01-23
 #
 #  Description:		Generic Linux System Backup is an advanced backup tool written in bash.
 #
@@ -32,7 +32,7 @@
 #
 #========================================================================================================
 
-# shellcheck disable=SC2034,SC2154
+# shellcheck disable=SC2034
 
 #---------
 # Logging:
