If style changed. Some shellcheck warnings fixed.

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -1,38 +1,47 @@
 #!/usr/bin/env bash
 
-#========================================================================================================
+#===================================================================================================
 #
-#  Author:		Christian Zettel (ccztux)
-#			2017-02-04
-#			http://linuxinside.at
+#  Author:				Christian Zettel (ccztux)
+#						2017-02-04
+#						http://linuxinside.at
 #
-#  Copyright:		Copyright © 2017 Christian Zettel (ccztux), all rights reserved
+#  Copyright:			Copyright © 2017 Christian Zettel (ccztux), all rights reserved
 #
-#  Project website:	https://github.com/ccztux/glsysbackup
+#  Project website:		https://github.com/ccztux/glsysbackup
 #
 #  Last Modification:	Christian Zettel (ccztux)
-#			2019-01-13
+#						2018-03-16
 #
-#  Description:		Generic Linux System Backup is an advanced backup tool written in bash.
+#  Description:			Generic Linux System Backup is an advanced backup tool written in bash.
 #
-#  License:		GNU GPLv3
+#  License:				GNU GPLv3
 #
 #  This program is free software: you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
 #  the Free Software Foundation, either version 3 of the License, or
 #  (at your option) any later version.
-#  
+#
 #  This program is distributed in the hope that it will be useful,
 #  but WITHOUT ANY WARRANTY; without even the implied warranty of
 #  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 #  GNU General Public License for more details.
-#  
-#  You should have received a copy of the GNU General Public License
-#  along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
-#========================================================================================================
+#  You should have received a copy of the GNU General Public License
+#  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
+#===================================================================================================
+
 
 # shellcheck disable=SC2034
+
+if [[ "${BASH_SOURCE[0]}" == "${0}" ]]
+then
+	printf "\\n%s is a bash config file. Dont execute it directly!\\n\\n" "${0##*/}"
+	exit 1
+fi
+
+
 
 #---------
 # Logging:
@@ -199,7 +208,7 @@ backup_encryption_password="test1234"
 # enable pre backup script functionality (possible values: 1|0)
 pre_backup_script_enabled="0"
 
-# path to pre backup script 
+# path to pre backup script
 pre_backup_script="/home/pi/pre.sh"
 
 # exit glsysbackup in case execution of pre backup script was not successful
@@ -214,7 +223,7 @@ pre_backup_exit_when_unsuccessful="1"
 # enable post backup script functionality (possible values: 1|0)
 post_backup_script_enabled="0"
 
-# path to post backup script 
+# path to post backup script
 post_backup_script="/home/pi/post.sh"
 
 # exit glsysbackup in case execution of post backup script was not successful
