Implemented: Add logrotate config file and add option to log only the last backup cycle. (#72) Changed: Variable: bash_lineno in function sigHandler renamed to: lineno Improvements in functions: checkAlreadyRunningInstance and rotateHandler

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -59,6 +59,9 @@ log_to_syslog="0"
 # timestamp format for log messages.
 log_timestamp_format="%Y-%m-%d %H:%M:%S"
 
+# truncate logfile at each backup cycle (possible values: 1|0)
+log_to_file_truncate="0"
+
 
 
 #------------
