--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -13,6 +13,8 @@
 #  Last Modification:	Christian Zettel (ccztux)
 #						2018-03-19
 #
+#  Version				2.0.0-beta3
+#
 #  Description:			Generic Linux System Backup is an advanced backup tool written in bash.
 #
 #  License:				GNU GPLv3
