--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -175,7 +175,7 @@ backup_individual_options=(
 backup_destination_path="/var/backups"
 
 # set backup filename
-backup_base_filename="my_backup"
+backup_base_filename="${script_config_name}"
 
 # files and folders you want to backup
 backup_items=(
