--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -35,6 +35,7 @@
 #===================================================================================================
 
 
+# shellcheck disable=SC2034
 # shellcheck disable=SC2154
 
 if [[ "${BASH_SOURCE[0]}" == "${0}" ]]
