Implemented: Backup successful validation. (#57). Changed: Minor improvements in function: checkAlreadyRunningInstance Fixed: Typo in README.md

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -155,6 +155,9 @@ installed_packages_directory="/root"
 # Backup:
 #--------
 
+# tar return value which will be interpreted as backup was successful (possible values: 0|1|2) (HINT: have a look at: 'man tar' section: 'RETURN VALUE')
+backup_successful_tar_rc="1"
+
 # enable backup compression (possible values: 1|0)
 backup_compression_enabled="1"
 
