--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -50,19 +50,24 @@ fi
 # Logging:
 #---------
 
-# enable log to file. (possible values: 1|0)
+# enable log to file
+# (possible values: 1|0)
 log_to_file="1"
 
-# enable log to stdout (possible values: 1|0)
+# enable log to stdout
+# (possible values: 1|0)
 log_to_stdout="1"
 
-# enable log to system logfile (possible values: 1|0)
+# enable log to system logfile
+# (possible values: 1|0)
 log_to_syslog="0"
 
-# timestamp format for log messages.
+# timestamp format for log messages
+# (HINT: have a look at: 'man strftime')
 log_timestamp_format="%Y-%m-%d %H:%M:%S"
 
-# truncate logfile at each backup cycle (possible values: 1|0)
+# truncate logfile at each backup cycle
+# (possible values: 1|0)
 log_to_file_truncate="0"
 
 
@@ -71,7 +76,8 @@ log_to_file_truncate="0"
 # Privileges:
 #------------
 
-# enable this to ensure glsysbackup is running with root privileges (possible values: 1|0)
+# enable this to ensure glsysbackup is running with root privileges
+# (possible values: 1|0)
 root_privileges_required="1"
 
 
@@ -80,10 +86,13 @@ root_privileges_required="1"
 # Renice:
 #--------
 
-# enable reniceing of glsysbackup and child procs (possible values: 1|0)
+# enable reniceing of glsysbackup and child procs
+# (possible values: 1|0)
 re_nice_enabled="0"
 
-# set renice priority (HINT: have a look at: 'man renice')
+# set renice priority
+# (possible values: -20...19)
+# (HINT: have a look at: 'man renice')
 re_nice_priority="19"
 
 
@@ -92,13 +101,18 @@ re_nice_priority="19"
 # Re-ionice:
 #-----------
 
-# enable re-ioniceing of glsysbackup and child procs (possible values: 1|0)
+# enable re-ioniceing of glsysbackup and child procs
+# (possible values: 1|0)
 re_ionice_enabled="0"
 
-# set re-ionice scheduling class (HINT: have a look at: 'man ionice')
+# set re-ionice scheduling class
+# (possible values: 0|1|2|3)
+# (HINT: have a look at: 'man ionice')
 re_ionice_scheduling_class="2"
 
-# set re-ionice priority (HINT: have a look at: 'man ionice')
+# set re-ionice priority
+# (possible values: 0...7)
+# (HINT: have a look at: 'man ionice')
 re_ionice_priority="7"
 
 
@@ -110,25 +124,30 @@ re_ionice_priority="7"
 # keep max 1 backup a day
 backup_rotation_one_backup_per_day_only="1"
 
-# enable daily backup rotation (possible values: 1|0)
+# enable daily backup rotation
+# (possible values: 1|0)
 backup_rotation_daily_enabled="1"
 
 # number of backup files to keep of daily backups
 backup_rotation_daily_max_backups="10"
 
-# enable weekly backup rotation (possible values: 1|0)
+# enable weekly backup rotation
+# (possible values: 1|0)
 backup_rotation_weekly_enabled="1"
 
-# rotation weekday for weekly rotation. 1 is monday. (possible values: 1|2|3|4|5|6|7)
+# rotation weekday for weekly rotation (1 is monday)
+# (possible values: 1|2|3|4|5|6|7)
 backup_rotation_weekly_weekday="1"
 
 # number of backup files to keep of weekly backups
 backup_rotation_weekly_max_backups="8"
 
-# enable monthly backup rotation (possible values: 1|0)
+# enable monthly backup rotation
+# (possible values: 1|0)
 backup_rotation_monthly_enabled="1"
 
-# rotation day of month for monthly rotation. 1 is monday. (possible values: 1|2|3|...|last day of month)
+# rotation day of month for monthly rotation (1 is monday)
+# (possible values: 1|2|3|...|last day of month)
 backup_rotation_monthly_day_of_month="1"
 
 # number of backup files to keep of monthly backups
@@ -140,10 +159,13 @@ backup_rotation_monthly_max_backups="6"
 # Installed packages:
 #--------------------
 
-# enable the creation of installed packages file (possible values: 1|0)
+# enable the creation of installed packages file
+# (possible values: 1|0)
 installed_packages_enabled="1"
 
-# force this package manager to create installed packages file, if you have more than one package manager installed (possible values: rpm|dpkg|pacman|equery|pkgutil)
+# force this package manager to create installed packages file, if you have more than one package
+# manager installed
+# (possible values: rpm|dpkg|pacman|equery|pkgutil)
 installed_packages_forced_manager=""
 
 # path where installed packages file should be created
@@ -155,22 +177,29 @@ installed_packages_directory="/root"
 # Backup:
 #--------
 
-# tar return value which will be interpreted as backup was successful (possible values: 0|1|2) (HINT: have a look at: 'man tar' section: 'RETURN VALUE')
+# if this value is less equal than the tar rc, the backup job will be interpreted
+# as 'backup successful'
+# (possible values: 0|1|2)
+# (HINT: have a look at: 'man tar' section: 'RETURN VALUE')
 backup_successful_tar_rc="1"
 
-# enable backup compression (possible values: 1|0)
+# enable backup compression
+# (possible values: 1|0)
 backup_compression_enabled="1"
 
-# backup compression type (possible values: gzip|bzip2|xz|lzip|lzma|lzop)
+# backup compression type
+# (possible values: gzip|bzip2|xz|lzip|lzma|lzop)
 backup_compression_type="gzip"
 
 # enable backup verbose mode
 backup_verbose_mode_enabled="1"
 
 # show backup totals
+# (possible values: 1|0)
 backup_show_totals="1"
 
 # individual tar options
+# (HINT: have a look at: 'man tar')
 backup_individual_options=(
 ""
 )
@@ -191,7 +220,8 @@ backup_items=(
 "/boot/config.txt"
 )
 
-# exclude this items from backup (HINT: have a look at: 'man tar')
+# exclude this items from backup
+# (HINT: have a look at: 'man tar')
 backup_exlude_items=(
 ""
 )
@@ -202,7 +232,8 @@ backup_exlude_items=(
 # Encryption:
 #------------
 
-# enable backup encryption with openssl (possible values: 1|0)
+# enable backup encryption with openssl
+# (possible values: 1|0)
 backup_encryption_enabled="0"
 
 # set password for encryption
@@ -214,13 +245,15 @@ backup_encryption_password="test1234"
 # Pre backup script:
 #-------------------
 
-# enable pre backup script functionality (possible values: 1|0)
+# enable pre backup script functionality
+# (possible values: 1|0)
 pre_backup_script_enabled="0"
 
 # path to pre backup script
 pre_backup_script="/home/pi/pre.sh"
 
 # exit glsysbackup in case execution of pre backup script was not successful
+# (possible values: 1|0)
 pre_backup_exit_when_unsuccessful="1"
 
 
@@ -229,11 +262,13 @@ pre_backup_exit_when_unsuccessful="1"
 # Post backup script:
 #--------------------
 
-# enable post backup script functionality (possible values: 1|0)
+# enable post backup script functionality
+# (possible values: 1|0)
 post_backup_script_enabled="0"
 
 # path to post backup script
 post_backup_script="/home/pi/post.sh"
 
 # exit glsysbackup in case execution of post backup script was not successful
+# (possible values: 1|0)
 post_backup_exit_when_unsuccessful="1"
