Yet another shellcheck test...

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -51,6 +51,11 @@ fi
 #---------
 shellcheck_test_var=hallo du
 
+if [ $shellcheck_test_var == "" ]
+then
+	echo empty
+fi
+
 # enable log to file
 # (possible values: 1|0)
 log_to_file="1"
