--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,18 @@ sudo: required
 language: bash
 
 services:
-	- docker
+  - docker
 
 before_install:
-	- docker pull koalaman/shellcheck
+  - docker pull koalaman/shellcheck
 
 script:
-	- docker run koalaman/shellcheck --color=always --version
-	- docker run -v $(pwd):/scripts koalaman/shellcheck --color=always --external-sources /scripts/usr/local/glsysbackup/bin/glsysbackup
-	- docker run -v $(pwd):/scripts koalaman/shellcheck --color=always /scripts/usr/local/glsysbackup/etc/glsysbackup.conf
+  - docker run koalaman/shellcheck -color=always --version
+  - docker run -v $(pwd):/scripts koalaman/shellcheck --color=always --external-sources /scripts/usr/local/glsysbackup/bin/glsysbackup
+  - docker run -v $(pwd):/scripts koalaman/shellcheck --color=always /scripts/usr/local/glsysbackup/etc/glsysbackup.conf
 
 matrix:
-	fast_finish: true
+  fast_finish: true
 
 notifications:
-	email: false
+  email: false
