--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -35,8 +35,8 @@
 #===================================================================================================
 
 
-# shellcheck disable=SC2034
-# shellcheck disable=SC2154
+# s#hellcheck disable=SC2034
+# s#hellcheck disable=SC2154
 
 if [[ "${BASH_SOURCE[0]}" == "${0}" ]]
 then
@@ -50,11 +50,6 @@ fi
 # Logging:
 #---------
 shellcheck_test_var=hallo du
-
-if [ $shellcheck_test_var == "" ]
-then
-	echo empty
-fi
 
 # enable log to file
 # (possible values: 1|0)
