Testing around with shellcheck...

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -50,6 +50,10 @@ fi
 # Logging:
 #---------
 shellcheck_test_var=hallo du
+if [ $shellcheck_test_var == "" ]
+then
+	echo ok ok
+fi
 
 # enable log to file
 # (possible values: 1|0)
