Finalizing shellcheck tests...

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -35,7 +35,7 @@
 #===================================================================================================
 
 
-# s#hellcheck disable=SC2034
+# shellcheck disable=SC2034
 # s#hellcheck disable=SC2154
 
 if [[ "${BASH_SOURCE[0]}" == "${0}" ]]
@@ -49,11 +49,6 @@ fi
 #---------
 # Logging:
 #---------
-shellcheck_test_var=hallo du
-if [ $shellcheck_test_var == "" ]
-then
-	echo ok ok
-fi
 
 # enable log to file
 # (possible values: 1|0)
