--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -36,7 +36,7 @@
 
 
 # shellcheck disable=SC2034
-# s#hellcheck disable=SC2154
+# shellcheck disable=SC2154
 
 if [[ "${BASH_SOURCE[0]}" == "${0}" ]]
 then
