Implemented: Add an option to log to journald. (#85)

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -11,7 +11,7 @@
 #  Project website:		https://github.com/ccztux/glsysbackup
 #
 #  Last Modification:	Christian Zettel (ccztux)
-#						2019-03-30
+#						2019-03-31
 #
 #  Version				2.0.0-beta4
 #
@@ -61,6 +61,10 @@ log_to_stdout="1"
 # enable log to system logfile
 # (possible values: 1|0)
 log_to_syslog="0"
+
+# enable log to system journal
+# (possible values: 1|0)
+log_to_journal="0"
 
 # timestamp format for log messages
 # (HINT: have a look at: 'man strftime')
