Fixed part2: Unify square brackets in if conditions and add spaces to arithmetic conditions #96

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -38,7 +38,7 @@
 # shellcheck disable=SC2034
 # shellcheck disable=SC2154
 
-if [[ "${BASH_SOURCE[0]}" == "${0}" ]]
+if [ "${BASH_SOURCE[0]}" == "${0}" ]
 then
 	printf "\\n%s is a bash config file. Dont execute it directly!\\n\\n" "${0##*/}"
 	exit 1
