--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before_install:
-  - docker pull koalaman/shellcheck
+  - docker pull koalaman/shellcheck:stable
 
 script:
   - docker run koalaman/shellcheck --version
