--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,8 @@ charset = utf-8
 max_line_length = 100
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+
+[*.yml]
+indent_style = space
+indent_size = 2
