Implemented (part3): Update documentation. (#83)

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -80,7 +80,7 @@ log_to_file_truncate="0"
 # Privileges:
 #------------
 
-# enable this to ensure glsysbackup is running with root privileges
+# enable this to check if glsysbackup is running with root privileges
 # (possible values: 1|0)
 root_privileges_required="1"
 
