Implemented: Add example post- and pre-backup scripts. (#121)

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -11,9 +11,9 @@
 #  Project website:		https://github.com/ccztux/glsysbackup
 #
 #  Last Modification:	Christian Zettel (ccztux)
-#						2019-11-17
+#						2019-11-23
 #
-#  Version				2.0.0-beta4
+#  Version				2.0.0-rc1
 #
 #  Description:			Generic Linux System Backup is an advanced backup tool written in bash.
 #
@@ -254,7 +254,7 @@ backup_encryption_password="test1234"
 pre_backup_script_enabled="0"
 
 # path to pre backup script
-pre_backup_script="/home/pi/pre.sh"
+pre_backup_script="${script_base_path}/libexec/create_automysqlbackup"
 
 # exit glsysbackup in case execution of pre backup script was not successful
 # (possible values: 1|0)
@@ -271,7 +271,7 @@ pre_backup_exit_when_unsuccessful="1"
 post_backup_script_enabled="0"
 
 # path to post backup script
-post_backup_script="/home/pi/post.sh"
+post_backup_script="${script_base_path}/libexec/scp_to_remote_host"
 
 # exit glsysbackup in case execution of post backup script was not successful
 # (possible values: 1|0)
