--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ script:
   - docker run koalaman/shellcheck:stable --version
   - docker run -v $(pwd):/scripts koalaman/shellcheck:stable --color=always --external-sources /scripts/usr/local/glsysbackup/bin/glsysbackup
   - docker run -v $(pwd):/scripts koalaman/shellcheck:stable --color=always /scripts/usr/local/glsysbackup/etc/glsysbackup.conf
+  - docker run -v $(pwd):/scripts koalaman/shellcheck:stable --color=always /scripts/usr/local/glsysbackup/libexec/create_automysqlbackup
+  - docker run -v $(pwd):/scripts koalaman/shellcheck:stable --color=always /scripts/usr/local/glsysbackup/libexec/scp_to_remote_host
 
 matrix:
   fast_finish: true
