--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -11,7 +11,7 @@
 #  Project website:		https://github.com/ccztux/glsysbackup
 #
 #  Last Modification:	Christian Zettel (ccztux)
-#						2019-11-23
+#						2019-11-24
 #
 #  Version				2.0.0-rc1
 #
@@ -34,9 +34,13 @@
 #
 #===================================================================================================
 
-
 # shellcheck disable=SC2034
 # shellcheck disable=SC2154
+
+
+#----------------------------------------------------
+# In case of direct execution, write output and exit:
+#----------------------------------------------------
 
 if [ "${BASH_SOURCE[0]}" == "${0}" ]
 then
