--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -257,8 +257,10 @@ backup_encryption_password="test1234"
 # (possible values: 1|0)
 pre_backup_script_enabled="0"
 
-# path to pre backup script
-pre_backup_script="${script_base_path}/libexec/create_automysqlbackup"
+# define your pre backup scripts
+pre_backup_scripts=(
+"${script_base_path}/libexec/create_automysqlbackup"
+)
 
 # exit glsysbackup in case execution of pre backup script was not successful
 # (possible values: 1|0)
@@ -274,8 +276,10 @@ pre_backup_exit_when_unsuccessful="1"
 # (possible values: 1|0)
 post_backup_script_enabled="0"
 
-# path to post backup script
-post_backup_script="${script_base_path}/libexec/scp_to_remote_host"
+# define your post backup scripts
+post_backup_scripts=(
+"${script_base_path}/libexec/scp_to_remote_host"
+)
 
 # exit glsysbackup in case execution of post backup script was not successful
 # (possible values: 1|0)
