--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -55,19 +55,19 @@ fi
 #---------
 
 # enable log to file
-# (possible values: 1|0)
+# (valid values: 1|0)
 log_to_file="1"
 
 # enable log to stdout
-# (possible values: 1|0)
+# (valid values: 1|0)
 log_to_stdout="1"
 
 # enable log to system logfile
-# (possible values: 1|0)
+# (valid values: 1|0)
 log_to_syslog="0"
 
 # enable log to system journal
-# (possible values: 1|0)
+# (valid values: 1|0)
 log_to_journal="0"
 
 # timestamp format for log messages
@@ -75,7 +75,7 @@ log_to_journal="0"
 log_timestamp_format="%Y-%m-%d %H:%M:%S"
 
 # truncate logfile at each backup cycle
-# (possible values: 1|0)
+# (valid values: 1|0)
 log_to_file_truncate="0"
 
 
@@ -85,7 +85,7 @@ log_to_file_truncate="0"
 #------------
 
 # enable this to check if glsysbackup is running with root privileges
-# (possible values: 1|0)
+# (valid values: 1|0)
 root_privileges_required="1"
 
 
@@ -95,11 +95,11 @@ root_privileges_required="1"
 #--------
 
 # enable reniceing of glsysbackup and child procs
-# (possible values: 1|0)
+# (valid values: 1|0)
 re_nice_enabled="0"
 
 # set renice priority
-# (possible values: -20...19)
+# (valid values: -20...19)
 # (HINT: have a look at: 'man renice')
 re_nice_priority="19"
 
@@ -110,16 +110,16 @@ re_nice_priority="19"
 #-----------
 
 # enable re-ioniceing of glsysbackup and child procs
-# (possible values: 1|0)
+# (valid values: 1|0)
 re_ionice_enabled="0"
 
 # set re-ionice scheduling class
-# (possible values: 0|1|2|3)
+# (valid values: 0|1|2|3)
 # (HINT: have a look at: 'man ionice')
 re_ionice_scheduling_class="2"
 
 # set re-ionice priority
-# (possible values: 0...7)
+# (valid values: 0...7)
 # (HINT: have a look at: 'man ionice')
 re_ionice_priority="7"
 
@@ -133,29 +133,29 @@ re_ionice_priority="7"
 backup_rotation_one_backup_per_day_only="1"
 
 # enable daily backup rotation
-# (possible values: 1|0)
+# (valid values: 1|0)
 backup_rotation_daily_enabled="1"
 
 # number of backup files to keep of daily backups
 backup_rotation_daily_max_backups="10"
 
 # enable weekly backup rotation
-# (possible values: 1|0)
+# (valid values: 1|0)
 backup_rotation_weekly_enabled="1"
 
 # rotation weekday for weekly rotation (1 is monday)
-# (possible values: 1|2|3|4|5|6|7)
+# (valid values: 1|2|3|4|5|6|7)
 backup_rotation_weekly_weekday="1"
 
 # number of backup files to keep of weekly backups
 backup_rotation_weekly_max_backups="8"
 
 # enable monthly backup rotation
-# (possible values: 1|0)
+# (valid values: 1|0)
 backup_rotation_monthly_enabled="1"
 
 # rotation day of month for monthly rotation (1 is monday)
-# (possible values: 1|2|3|...|last day of month)
+# (valid values: 1|2|3|...|last day of month)
 backup_rotation_monthly_day_of_month="1"
 
 # number of backup files to keep of monthly backups
@@ -168,12 +168,12 @@ backup_rotation_monthly_max_backups="6"
 #--------------------
 
 # enable the creation of installed packages file
-# (possible values: 1|0)
+# (valid values: 1|0)
 installed_packages_enabled="1"
 
 # force this package manager to create installed packages file, if you have more than one package
 # manager installed
-# (possible values: rpm|dpkg|pacman|equery|pkgutil)
+# (valid values: rpm|dpkg|pacman|equery|pkgutil|cygcheck)
 installed_packages_forced_manager=""
 
 # path where installed packages file should be created
@@ -187,23 +187,23 @@ installed_packages_directory="/root"
 
 # if this value is less equal than the tar rc, the backup job will be interpreted
 # as 'backup successful'
-# (possible values: 0|1|2)
+# (valid values: 0|1|2)
 # (HINT: have a look at: 'man tar' section: 'RETURN VALUE')
 backup_successful_tar_rc="1"
 
 # enable backup compression
-# (possible values: 1|0)
+# (valid values: 1|0)
 backup_compression_enabled="1"
 
 # backup compression type
-# (possible values: gzip|bzip2|xz|lzip|lzma|lzop)
+# (valid values: gzip|bzip2|xz|lzip|lzma|lzop)
 backup_compression_type="gzip"
 
 # enable backup verbose mode
 backup_verbose_mode_enabled="1"
 
 # show backup totals
-# (possible values: 1|0)
+# (valid values: 1|0)
 backup_show_totals="1"
 
 # individual tar options
@@ -241,7 +241,7 @@ backup_exlude_items=(
 #------------
 
 # enable backup encryption with openssl
-# (possible values: 1|0)
+# (valid values: 1|0)
 backup_encryption_enabled="0"
 
 # set password for encryption
@@ -254,14 +254,14 @@ backup_encryption_password="test1234"
 #-------------------
 
 # enable pre backup script functionality
-# (possible values: 1|0)
+# (valid values: 1|0)
 pre_backup_script_enabled="0"
 
 # path to pre backup script
 pre_backup_script="${script_base_path}/libexec/create_automysqlbackup"
 
 # exit glsysbackup in case execution of pre backup script was not successful
-# (possible values: 1|0)
+# (valid values: 1|0)
 pre_backup_exit_when_unsuccessful="1"
 
 
@@ -271,12 +271,12 @@ pre_backup_exit_when_unsuccessful="1"
 #--------------------
 
 # enable post backup script functionality
-# (possible values: 1|0)
+# (valid values: 1|0)
 post_backup_script_enabled="0"
 
 # path to post backup script
 post_backup_script="${script_base_path}/libexec/scp_to_remote_host"
 
 # exit glsysbackup in case execution of post backup script was not successful
-# (possible values: 1|0)
+# (valid values: 1|0)
 post_backup_exit_when_unsuccessful="1"
