Implemented (partly): Multiple pre- and post-backup-scripts. (#123)

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -249,38 +249,38 @@ backup_encryption_password="test1234"
 
 
 
-#-------------------
-# Pre backup script:
-#-------------------
+#---------------------
+# Pre backup commands:
+#---------------------
 
-# enable pre backup script functionality
+# enable pre backup commands functionality
 # (possible values: 1|0)
-pre_backup_script_enabled="0"
+pre_backup_commands_enabled="0"
 
-# define your pre backup scripts
-pre_backup_scripts=(
+# define your pre backup commands
+pre_backup_commands=(
 "${script_base_path}/libexec/create_automysqlbackup"
 )
 
-# exit glsysbackup in case execution of pre backup script was not successful
+# exit glsysbackup in case execution of pre backup commands were not successful
 # (possible values: 1|0)
 pre_backup_exit_when_unsuccessful="1"
 
 
 
-#--------------------
-# Post backup script:
-#--------------------
+#----------------------
+# Post backup commands:
+#----------------------
 
-# enable post backup script functionality
+# enable post backup commands functionality
 # (possible values: 1|0)
-post_backup_script_enabled="0"
+post_backup_commands_enabled="0"
 
-# define your post backup scripts
-post_backup_scripts=(
+# define your post backup commands
+post_backup_commands=(
 "${script_base_path}/libexec/scp_to_remote_host"
 )
 
-# exit glsysbackup in case execution of post backup script was not successful
+# exit glsysbackup in case execution of post backup commands were not successful
 # (possible values: 1|0)
 post_backup_exit_when_unsuccessful="1"
