Added: df as pre- and post-backup-commands.

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -259,6 +259,7 @@ pre_backup_commands_enabled="0"
 
 # define your pre backup commands
 pre_backup_commands=(
+"df -ahHT ${backup_base_path}"
 "${script_base_path}/libexec/create_automysqlbackup"
 )
 
@@ -278,6 +279,7 @@ post_backup_commands_enabled="0"
 
 # define your post backup commands
 post_backup_commands=(
+"df -ahHT ${backup_base_path}"
 "${script_base_path}/libexec/scp_to_remote_host"
 )
 
