Implemented: Multiple pre- and post-backup-scripts. (#123)

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -263,9 +263,13 @@ pre_backup_commands=(
 "df -ahHT ${backup_base_path}"
 )
 
-# exit glsysbackup in case execution of pre backup commands were not successful
+# exit glsysbackup in case execution of pre backup commands was not successful
 # (valid values: 1|0)
 pre_backup_exit_when_unsuccessful="1"
+
+# exit glsysbckup at the very first pre backup command, which was not successful
+# (valid values: 1|0)
+pre_backup_paranoia_mode="0"
 
 
 
@@ -283,6 +287,10 @@ post_backup_commands=(
 "${script_base_path}/libexec/scp_to_remote_host"
 )
 
-# exit glsysbackup in case execution of post backup commands were not successful
+# exit glsysbackup in case execution of post backup commands was not successful
 # (valid values: 1|0)
 post_backup_exit_when_unsuccessful="1"
+
+# exit glsysbckup at the very first post backup command, which was not successful
+# (valid values: 1|0)
+post_backup_paranoia_mode="0"
