Changed: Subject of the example notification command.

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -307,7 +307,7 @@ notification_commands_enabled="0"
 
 # define your notification commands
 notification_commands=(
-"/usr/local/bin/sendEmail.pl -f from@mydomain.com -t to@mydomain.com -u subject -m body"
+"/usr/local/bin/sendEmail.pl -f from@mydomain.com -t to@mydomain.com -u \"${script_name} (${script_version}) - Backup job: ${script_config_name} ready\" -m body"
 )
 
 # notify all backup cycles or only unsuccessful ones
