Default config updated.

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -245,7 +245,7 @@ backup_exlude_items=(
 backup_encryption_enabled="0"
 
 # set password for encryption
-backup_encryption_password="test1234"
+backup_encryption_password="change_me"
 
 
 
