Changed: Value of configuration variable installed_packages_directory from /root to /tmp because in cygwin the /root directory doesnt exist.

--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -177,7 +177,7 @@ installed_packages_enabled="1"
 installed_packages_forced_manager=""
 
 # path where installed packages file should be created
-installed_packages_directory="/root"
+installed_packages_directory="/tmp"
 
 
 
