--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -7,7 +7,7 @@ permissions:
 
 jobs:
   lint:
-    runs-on: koalaman-shellcheck:stable
+    runs-on: ubuntu-latest
 
     steps:
       - name: Show versions
