Playing around with github actions.

--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -13,7 +13,12 @@ jobs:
       - name: Show versions
         run: |
           bash --version
-          shellcheck --version
+          shellcheck --color=always --version
+
+      - name: Repository checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Shellcheck
         run: |
