Hopefully fixed github action error: You have an error in your yaml syntax on line 11

--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -8,8 +8,7 @@ permissions:
 jobs:
   lint:
     runs-on: ubuntu-latest
-      container:
-        image: koalaman/shellcheck:stable
+      container: koalaman/shellcheck:stable
 
       - name: Show versions
         run: |
