--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -8,7 +8,7 @@ permissions:
 jobs:
   lint:
     runs-on: ubuntu-latest
-      container: koalaman/shellcheck:stable
+      container: koalaman-shellcheck:stable
 
       - name: Show versions
         run: |
