--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -8,7 +8,8 @@ permissions:
 jobs:
   lint:
     runs-on: ubuntu-latest
-      container: koalaman-shellcheck:stable
+    container:
+      image: koalaman/shellcheck:stable
 
       - name: Show versions
         run: |
