--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -8,7 +8,7 @@ permissions:
 jobs:
   container-job:
     runs-on: ubuntu-latest
-    container: ubuntu-latest
+    container: centos-latest
 
     services:
       shellcheck:
