--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -8,11 +8,10 @@ permissions:
 jobs:
   container-job:
     runs-on: ubuntu-latest
+    container:
+      image: koalaman/shellcheck:stable
 
-    services:
-      shellcheck:
-        image: koalaman/shellcheck:stable
-
+    steps:
       - name: Show versions
         run: |
           bash --version
