--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Get the stabel ShellCheck container
+      - name: Get the stable ShellCheck container
         run: |
           sudo docker pull koalaman/shellcheck:stable
 
@@ -25,6 +25,6 @@ jobs:
 
       - name: ShellCheck our scripts
         run: |
-          - docker run -v $(pwd):/scripts koalaman/shellcheck:stable --color=always --check-sourced --external-sources /scripts/usr/local/glsysbackup/bin/glsysbackup
-          - docker run -v $(pwd):/scripts koalaman/shellcheck:stable --color=always /scripts/usr/local/glsysbackup/libexec/create_automysqlbackup
-          - docker run -v $(pwd):/scripts koalaman/shellcheck:stable --color=always /scripts/usr/local/glsysbackup/libexec/scp_to_remote_host
+          docker run -v $(pwd):/scripts koalaman/shellcheck:stable --color=always --check-sourced --external-sources /scripts/usr/local/glsysbackup/bin/glsysbackup
+          docker run -v $(pwd):/scripts koalaman/shellcheck:stable --color=always /scripts/usr/local/glsysbackup/libexec/create_automysqlbackup
+          docker run -v $(pwd):/scripts koalaman/shellcheck:stable --color=always /scripts/usr/local/glsysbackup/libexec/scp_to_remote_host
