Try to fix false positives from differential shellcheck

--- a/.github/workflows/differential-shellcheck.yml
+++ b/.github/workflows/differential-shellcheck.yml
@@ -18,4 +18,8 @@ jobs:
       - name: Differential ShellCheck
         uses: redhat-plumbers-in-action/differential-shellcheck@latest
         with:
+          shell-scripts:
+            /usr/local/glsysbackup/bin/glsysbackup
+            /usr/local/glsysbackup/libexec/create_automysqlbackup
+            /usr/local/glsysbackup/libexec/scp_to_remote_host
           token: ${{ secrets.GITHUB_TOKEN }}
