--- a/usr/local/glsysbackup/etc/glsysbackup.conf
+++ b/usr/local/glsysbackup/etc/glsysbackup.conf
@@ -11,9 +11,9 @@
 #  Project website:		https://github.com/ccztux/glsysbackup
 #
 #  Last Modification:	Christian Zettel (ccztux)
-#						2019-12-13
+#						2019-11-17
 #
-#  Version				2.0.0-rc1
+#  Version				2.0.0-beta4
 #
 #  Description:			Generic Linux System Backup is an advanced backup tool written in bash.
 #
@@ -35,9 +35,8 @@
 #===================================================================================================
 
 
-#----------------------------------------------------
-# In case of direct execution, write output and exit:
-#----------------------------------------------------
+# shellcheck disable=SC2034
+# shellcheck disable=SC2154
 
 if [ "${BASH_SOURCE[0]}" == "${0}" ]
 then
@@ -52,19 +51,19 @@ fi
 #---------
 
 # enable log to file
-# (valid values: 1|0)
+# (possible values: 1|0)
 log_to_file="1"
 
 # enable log to stdout
-# (valid values: 1|0)
+# (possible values: 1|0)
 log_to_stdout="1"
 
 # enable log to system logfile
-# (valid values: 1|0)
+# (possible values: 1|0)
 log_to_syslog="0"
 
 # enable log to system journal
-# (valid values: 1|0)
+# (possible values: 1|0)
 log_to_journal="0"
 
 # timestamp format for log messages
@@ -72,7 +71,7 @@ log_to_journal="0"
 log_timestamp_format="%Y-%m-%d %H:%M:%S"
 
 # truncate logfile at each backup cycle
-# (valid values: 1|0)
+# (possible values: 1|0)
 log_to_file_truncate="0"
 
 
@@ -82,7 +81,7 @@ log_to_file_truncate="0"
 #------------
 
 # enable this to check if glsysbackup is running with root privileges
-# (valid values: 1|0)
+# (possible values: 1|0)
 root_privileges_required="1"
 
 
@@ -92,11 +91,11 @@ root_privileges_required="1"
 #--------
 
 # enable reniceing of glsysbackup and child procs
-# (valid values: 1|0)
+# (possible values: 1|0)
 re_nice_enabled="0"
 
 # set renice priority
-# (valid values: -20...19)
+# (possible values: -20...19)
 # (HINT: have a look at: 'man renice')
 re_nice_priority="19"
 
@@ -107,16 +106,16 @@ re_nice_priority="19"
 #-----------
 
 # enable re-ioniceing of glsysbackup and child procs
-# (valid values: 1|0)
+# (possible values: 1|0)
 re_ionice_enabled="0"
 
 # set re-ionice scheduling class
-# (valid values: 0|1|2|3)
+# (possible values: 0|1|2|3)
 # (HINT: have a look at: 'man ionice')
 re_ionice_scheduling_class="2"
 
 # set re-ionice priority
-# (valid values: 0...7)
+# (possible values: 0...7)
 # (HINT: have a look at: 'man ionice')
 re_ionice_priority="7"
 
@@ -130,29 +129,29 @@ re_ionice_priority="7"
 backup_rotation_one_backup_per_day_only="1"
 
 # enable daily backup rotation
-# (valid values: 1|0)
+# (possible values: 1|0)
 backup_rotation_daily_enabled="1"
 
 # number of backup files to keep of daily backups
 backup_rotation_daily_max_backups="10"
 
 # enable weekly backup rotation
-# (valid values: 1|0)
+# (possible values: 1|0)
 backup_rotation_weekly_enabled="1"
 
 # rotation weekday for weekly rotation (1 is monday)
-# (valid values: 1|2|3|4|5|6|7)
+# (possible values: 1|2|3|4|5|6|7)
 backup_rotation_weekly_weekday="1"
 
 # number of backup files to keep of weekly backups
 backup_rotation_weekly_max_backups="8"
 
 # enable monthly backup rotation
-# (valid values: 1|0)
+# (possible values: 1|0)
 backup_rotation_monthly_enabled="1"
 
 # rotation day of month for monthly rotation (1 is monday)
-# (valid values: 1|2|3|...|last day of month)
+# (possible values: 1|2|3|...|last day of month)
 backup_rotation_monthly_day_of_month="1"
 
 # number of backup files to keep of monthly backups
@@ -165,16 +164,16 @@ backup_rotation_monthly_max_backups="6"
 #--------------------
 
 # enable the creation of installed packages file
-# (valid values: 1|0)
+# (possible values: 1|0)
 installed_packages_enabled="1"
 
 # force this package manager to create installed packages file, if you have more than one package
 # manager installed
-# (valid values: rpm|dpkg|pacman|equery|pkgutil|cygcheck)
+# (possible values: rpm|dpkg|pacman|equery|pkgutil)
 installed_packages_forced_manager=""
 
 # path where installed packages file should be created
-installed_packages_directory="/tmp"
+installed_packages_directory="/root"
 
 
 
@@ -184,23 +183,23 @@ installed_packages_directory="/tmp"
 
 # if this value is less equal than the tar rc, the backup job will be interpreted
 # as 'backup successful'
-# (valid values: 0|1|2)
+# (possible values: 0|1|2)
 # (HINT: have a look at: 'man tar' section: 'RETURN VALUE')
 backup_successful_tar_rc="1"
 
 # enable backup compression
-# (valid values: 1|0)
+# (possible values: 1|0)
 backup_compression_enabled="1"
 
 # backup compression type
-# (valid values: gzip|bzip2|xz|lzip|lzma|lzop)
+# (possible values: gzip|bzip2|xz|lzip|lzma|lzop)
 backup_compression_type="gzip"
 
 # enable backup verbose mode
 backup_verbose_mode_enabled="1"
 
 # show backup totals
-# (valid values: 1|0)
+# (possible values: 1|0)
 backup_show_totals="1"
 
 # individual tar options
@@ -238,75 +237,42 @@ backup_exlude_items=(
 #------------
 
 # enable backup encryption with openssl
-# (valid values: 1|0)
+# (possible values: 1|0)
 backup_encryption_enabled="0"
 
 # set password for encryption
-backup_encryption_password="change_me"
+backup_encryption_password="test1234"
 
 
 
-#---------------------
-# Pre backup commands:
-#---------------------
+#-------------------
+# Pre backup script:
+#-------------------
 
-# enable pre backup commands functionality
-# (valid values: 1|0)
-pre_backup_commands_enabled="0"
+# enable pre backup script functionality
+# (possible values: 1|0)
+pre_backup_script_enabled="0"
 
-# define your pre backup commands
-pre_backup_commands=(
-"${script_base_path}/libexec/create_automysqlbackup"
-"df -ahHT ${backup_base_path}"
-)
+# path to pre backup script
+pre_backup_script="/home/pi/pre.sh"
 
-# exit glsysbackup in case execution of pre backup commands was not successful
-# (valid values: 1|0)
+# exit glsysbackup in case execution of pre backup script was not successful
+# (possible values: 1|0)
 pre_backup_exit_when_unsuccessful="1"
 
-# exit glsysbckup at the very first pre backup command, which was not successful
-# (valid values: 1|0)
-pre_backup_paranoia_mode="0"
 
 
+#--------------------
+# Post backup script:
+#--------------------
 
-#----------------------
-# Post backup commands:
-#----------------------
+# enable post backup script functionality
+# (possible values: 1|0)
+post_backup_script_enabled="0"
 
-# enable post backup commands functionality
-# (valid values: 1|0)
-post_backup_commands_enabled="0"
+# path to post backup script
+post_backup_script="/home/pi/post.sh"
 
-# define your post backup commands
-post_backup_commands=(
-"df -ahHT ${backup_base_path}"
-"${script_base_path}/libexec/scp_to_remote_host"
-)
-
-# exit glsysbackup in case execution of post backup commands was not successful
-# (valid values: 1|0)
+# exit glsysbackup in case execution of post backup script was not successful
+# (possible values: 1|0)
 post_backup_exit_when_unsuccessful="1"
-
-# exit glsysbckup at the very first post backup command, which was not successful
-# (valid values: 1|0)
-post_backup_paranoia_mode="0"
-
-
-
-#-----------------------
-# Notification commands:
-#-----------------------
-
-# enable notification commands functionality
-# (valid values: 1|0)
-notification_commands_enabled="0"
-
-# define your notification commands
-notification_commands=(
-"/usr/local/bin/sendEmail.pl -f from@mydomain.com -t to@mydomain.com -u \"${script_name} (${script_version}) - Backup job: ${script_config_name} ready\" -m body"
-)
-
-# notify all backup cycles or only unsuccessful ones
-# (valid values: 1|0)
-notification_notify_all_backup_jobs="0"
